Many Design Improvements especially for Desktop